# refstack-ui

./: .gitignore  README.md  README.rst  bower.json  package.json  requirements.txt  setup.cfg
app/: app.js  index.html
app/assets/css/: style.css
app/components/about/: about.html
app/components/capabilities/: capabilities.html  capabilitiesController.js
app/components/home/: home.html
app/shared/header/: header.html  headerController.js
refstack_ui/: app.py  config.py
refstack_ui/controllers/: results.py  root.py
refstack_ui/static/css/: style.css
refstack_ui/templates/: error.html  index.html  layout.html  results.html
